@@ -1,6 +1,7 @@
 irrlamb 1.0.1 -
 - Added secret levels to menu when unlocked
 - Added player/orb sounds to replays
+- Added option to enable/disable gamepad
 - Fixed various bugs in house level
 - Fixed some compile warnings
 - Minor bug fixes
